<resources>
    <string name="open_nav">Open navigation menu</string>
    <string name="close_nav">Close navigation menu</string>
    <string name="app_name">StanceNation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reserved">RESERVED</string>
    <string name="_364519">364519</string>
    <string name="kabelo_gmail_com">kabelo@gmail.com</string>
    <string name="cancel">CANCEL</string>
    <string name="reserve">RESERVE</string>
    <string name="email_gmail_com">Email@gmail.com</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="car_model">Car Model</string>
    <string name="vin_number">Vin Number</string>
    <string name="car_make">Car Make</string>
    <string name="register">REGISTER</string>
    <string name="skip">SKIP</string>
    <string name="upload_car_image">UPLOAD CAR IMAGE</string>
    <string name="ctsbtn">ctsbtn</string>
    <string name="login">Login</string>
    <string name="loginButton">Sign in</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="not_yet_registered_signup_now">Not yet registered? SignUp Now</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="event_image">Event Image</string>
    <string name="_12_01_2023">12/01/2023</string>
    <string name="car_show">Car Show</string>
    <string name="price_r500">Price: R500</string>
    <string name="car_events">Car Events</string>
    <string name="profile_icon">Profile Icon</string>
    <string name="coming_up">Coming Up</string>
    <string name="loading">Loading...</string>
    <string name="backbtn">backbtn</string>
    <string name="details">Details</string>
    <string name="stance_nationals_car_show">STANCE NATIONALS CAR SHOW</string>
    <string name="date_22_january_2024">DATE: 22 JANUARY 2024</string>
    <string name="normal_ticket_price_r80">NORMAL TICKET PRICE: R80</string>
    <string name="location_cnr_nasrec_and_randshow_rd">LOCATION: Cnr Nasrec and Randshow Rd</string>
    <string name="participating_ticket_price_r150">PARTICIPATING TICKET PRICE: R150</string>
    <string name="time_18_00_to_03_00">TIME: 18:00 to 03:00</string>
    <string name="buy_now">BUY NOW</string>
    <string name="profile">Profile</string>
    <string name="user_name">User Name</string>
    <string name="useremail_gmail_com">userEmail@gmail.com</string>
    <string name="home">Home</string>
    <string name="tickets">Tickets</string>
    <string name="logout">Logout</string>
    <string name="ticketno">TicketNo</string>
    <string name="_1">#1</string>
    <string name="nationals">Nationals</string>
    <string name="no_tickets_available">No Tickets Available</string>
    <string name="todo">TODO</string>
    <string name="status_reserved">STATUS: Reserved</string>
    <string name="price_r106">PRICE: R106</string>
    <string name="check_out_vehicle">CHECK OUT VEHICLE</string>
    <string name="individual_spectator">INDIVIDUAL: SPECTATOR</string>
    <string name="vehicle_vin_23jij343">Vehicle Vin: 23jij343</string>
    <string name="car_make_toyota">Car Make: Toyota</string>
    <string name="car_model_supra">Car Model: Supra</string>
    <string name="price_r120">Price: R120</string>
    <string name="pay_now">Pay Now</string>
    <string name="payment_gateway">Payment Gateway</string>
    <string name="expiration_date_mm_yy">Expiration Date (MM/YY)</string>
    <string name="card_number">Card Number</string>
    <string name="card_holder">Card Holder</string>
    <string name="cvv">CVV</string>
    <string name="add_a_card">Add a Card</string>
    <string name="add_card">Add Card</string>
    <string name="_4356">**** 4356</string>
    <string name="card">Card</string>
    <string name="cards">Cards</string>
    <string name="ticket_price">Ticket Price</string>
    <string name="event_name">Event Name</string>
    <string name="car_model_text">Car Model:</string>
    <string name="car_make_text">Car Make:</string>
    <string name="vin_number_text">Vin Number:</string>
</resources>