<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="360dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="8dp"
    app:cardCornerRadius="8dp"
    android:layout_margin="16dp"
    android:layout_gravity="center_horizontal"
    android:id="@+id/cardsCardview">

    <ImageView
        android:layout_width="140dp"
        android:layout_height="80dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/cardimage"
        android:contentDescription="@string/card"
        android:layout_marginStart="5dp"
        />

    <TextView
        android:id="@+id/CardHolderLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="180dp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/card"
        android:text="@string/card"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/CardLast4Digits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="180dp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/card_number"
        android:text="@string/_4356"
        android:textSize="23sp" />

</androidx.cardview.widget.CardView>