<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="360dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="8dp"
    app:cardCornerRadius="8dp"
    android:layout_margin="16dp"
    android:layout_gravity="center_horizontal"
    android:id="@+id/cardviewTicket">

    <TextView
        android:id="@+id/TicketNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/ticketno"
        android:text="@string/_1"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/TicketEventName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="70dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/nationals"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/TicketEventImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text=""
        android:visibility="invisible"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/TicketStatus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text=""
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/TicketEventDate"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text=""
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/TicketEventLocation"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text=""
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/TicketEventPrice"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text=""
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/TicketEventTime"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text=""
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/TicketEventPurpose"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text=""
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/TicketEventVin"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text=""
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/TicketEventVehImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text=""
        android:visibility="invisible"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/TicketEventCarMake"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text=""
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/TicketEventCarModel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text=""
        android:visibility="invisible"/>

</androidx.cardview.widget.CardView>